--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "nodemon": "^3.1.4",
     "sequelize": "^6.37.3",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "uuid": "^10.0.0"
   }
 }
